--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,21 @@
-<p>por-region works!</p>
+<h3>Buscar por region  <small>{{regionActiva |titlecase}}</small></h3>
+<hr>
+
+<h3>Seleccione la region</h3>
+<!--[class.btn-primary]="region===regionActiva"-->
+<div class="row">
+    <div class="col">
+
+        <button *ngFor= "let region of regiones" 
+            class="btn btn-outline-primary"
+            []
+            (click)="activarRegion(region)"
+            [class.btn-primary]="region===regionActiva"
+            >
+            {{region}}
+
+        </button>
+
+    </div>
+
+</div>
