--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -3,21 +3,32 @@
 
 <h3>Seleccione la region</h3>
 <!--[class.btn-primary]="region===regionActiva"-->
+<!--
+                [ngClass]="{
+                'btn-primary':regionActiva===region,
+                'btn-outline-primary': regionActiva!==region
+            }"
+-->
 <div class="row">
     <div class="col">
 
         <button *ngFor= "let region of regiones" 
-            class="btn btn-outline-primary"
+            [class]=" getClassCSS(region)"
             (click)="activarRegion(region)"
-            [ngClass]="{
-                'btn-primary':regionActiva===region,
-                'btn-outline-primary': regionActiva!==region
-            }"
-            
+
             >
           
-            {{region}}
+            {{region | titlecase}}
         </button>
+
+    </div>
+
+</div>
+
+<div *ngIf= "paises.length>0" class="row">
+    <div class="col">
+
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
 
     </div>
 
