--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,5 +1,7 @@
 
-<h2>Por Capital</h2>
+<div class="animate__animated animate__fadeIn animate___faster">
+    
+    <h2>Por Capital</h2>
 <hr>
 
 <div class="row">
@@ -12,6 +14,9 @@
       </app-pais-input>
     </div>
 </div>
+</div>
+
+
 
 <hr>
 
