--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,3 +1,5 @@
+<div class="animate__animated animate__fadeIn animate___faster">
+
 <h2>Por Pais</h2>
 <hr>
 
@@ -13,6 +15,8 @@
 </div>
 
 <hr>
+
+</div>
 
 <div *ngIf= "hayError"
     class=" alert alert-danger">
