--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,35 +1,38 @@
-<h3>Buscar por region  <small>{{regionActiva |titlecase}}</small></h3>
-<hr>
-
-<h3>Seleccione la region</h3>
-<!--[class.btn-primary]="region===regionActiva"-->
-<!--
-                [ngClass]="{
-                'btn-primary':regionActiva===region,
-                'btn-outline-primary': regionActiva!==region
-            }"
--->
-<div class="row">
-    <div class="col">
-
-        <button *ngFor= "let region of regiones" 
-            [class]=" getClassCSS(region)"
-            (click)="activarRegion(region)"
-
-            >
-          
-            {{region | titlecase}}
-        </button>
-
+<div class="animate__animated animate__fadeIn animate___faster">
+    <h3>Buscar por region  <small>{{regionActiva |titlecase}}</small></h3>
+    <hr>
+    
+    <h3>Seleccione la region</h3>
+    <!--[class.btn-primary]="region===regionActiva"-->
+    <!--
+                    [ngClass]="{
+                    'btn-primary':regionActiva===region,
+                    'btn-outline-primary': regionActiva!==region
+                }"
+    -->
+    <div class="row">
+        <div class="col">
+    
+            <button *ngFor= "let region of regiones" 
+                [class]=" getClassCSS(region)"
+                (click)="activarRegion(region)"
+    
+                >
+              
+                {{region | titlecase}}
+            </button>
+    
+        </div>
+    
     </div>
-
+    
+    <div *ngIf= "paises.length>0" class="row">
+        <div class="col">
+    
+            <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    
+        </div>
+    
+    </div>
 </div>
 
-<div *ngIf= "paises.length>0" class="row">
-    <div class="col">
-
-        <app-pais-tabla [paises]="paises"></app-pais-tabla>
-
-    </div>
-
-</div>
