--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -14,6 +14,25 @@
     </div>
 </div>
 
+<ul *ngIf="mostrarSugerencias"
+    class="list-group">
+    <li *ngFor="let pais of paisesSugeridos"
+        class="list-group-item list-group-item-action">
+        <a class="nav-link"
+            [routerLink]="['/pais',pais.ccn3]">
+            {{pais.name.common}}
+        </a>
+    </li>
+
+    <li *ngFor="let pais of paisesSugeridos"
+    class="list-group-item list-group-item-action"
+        (click)="buscarSugeridos(termino)">
+    <a class="nav-link">
+       Buscar "{{termino}}""
+    </a>
+</li>
+</ul>
+
 <hr>
 
 </div>
